--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,7 @@ all-features = true
 #
 [features]
 default = []
-event-stream = ["futures-core"]
-event-stream-tokio = ["event-stream", "tokio"]
-event-stream-async-std = ["event-stream", "async-std"]
+event-stream = ["futures-core", "async-stream"]
 
 #
 # Shared dependencies
@@ -41,8 +39,7 @@ parking_lot = "0.11"
 # optional deps only added when requested
 futures-core = { version = "0.3", optional = true, default-features = false }
 serde = { version = "1.0", features = ["derive"], optional = true }
-tokio = { version = "1.0", features = ["rt", "sync"], optional = true }
-async-std = { version = "1.10", optional = true }
+async-stream = { version = "0.3", optional = true }
 
 #
 # Windows dependencies
