--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "crossterm"
-version = "0.22.1"
+version = "0.23"
 authors = ["T. Post"]
 description = "A crossplatform terminal library for manipulating terminals."
 repository = "https://github.com/crossterm-rs/crossterm"
@@ -9,7 +9,7 @@ license = "MIT"
 keywords = ["event", "color", "cli", "input", "terminal"]
 exclude = ["target", "Cargo.lock"]
 readme = "README.md"
-edition = "2018"
+edition = "2021"
 categories = ["command-line-interface", "command-line-utilities"]
 
 [lib]
@@ -34,7 +34,7 @@ event-stream = ["futures-core"]
 #
 [dependencies]
 bitflags = "1.3"
-parking_lot = "0.11"
+parking_lot = "0.12"
 
 # optional deps only added when requested
 futures-core = { version = "0.3", optional = true, default-features = false }
@@ -45,7 +45,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 #
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3.9"
-features = ["winuser"]
+features = ["winuser", "winerror"]
 
 [target.'cfg(windows)'.dependencies]
 crossterm_winapi = "0.9"
@@ -56,18 +56,18 @@ crossterm_winapi = "0.9"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 mio = { version="0.7", features=["os-poll"] }
-signal-hook = { version = "0.3.8" }
+signal-hook = { version = "0.3.13" }
 signal-hook-mio = { version = "0.2.1", features = ["support-v0_7"] }
 
 #
 # Dev dependencies (examples, ...)
 #
 [dev-dependencies]
-tokio = { version = "1.5", features = ["full"] }
+tokio = { version = "1.16.1", features = ["full"] }
 futures = "0.3"
 futures-timer = "3.0"
-async-std = "1.9"
-serde_json = "1.0.45"
+async-std = "1.10"
+serde_json = "1.0"
 
 #
 # Examples
