--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ all-features = true
 # Features
 #
 [features]
-default = []
+default = ["bracketed-paste"]
+bracketed-paste = []
 event-stream = ["futures-core"]
 
 #
@@ -72,6 +73,10 @@ serde_json = "1.0"
 #
 # Examples
 #
+[[example]]
+name = "event-read"
+required-features = ["bracketed-paste"]
+
 [[example]]
 name = "event-stream-async-std"
 required-features = ["event-stream"]
