Replace mio polling with filedescriptor's poll() (#735)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ all-features = true
 default = ["bracketed-paste"]
 bracketed-paste = []
 event-stream = ["futures-core"]
+use-dev-tty = ["filedescriptor"]
 
 #
 # Shared dependencies
@@ -56,8 +57,9 @@ crossterm_winapi = "0.9"
 #
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
-mio = { version = "0.8", features = ["os-poll"] }
 signal-hook = { version = "0.3.13" }
+filedescriptor = { version = "0.8", optional = true }
+mio = { version = "0.8", features = ["os-poll"] }
 signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
 
 #
