--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ all-features = true
 # Features
 #
 [features]
-default = ["bracketed-paste"]
+default = ["bracketed-paste", "crossterm_winapi"]
 bracketed-paste = []
 event-stream = ["futures-core"]
 use-dev-tty = ["filedescriptor"]
@@ -50,7 +50,7 @@ version = "0.3.9"
 features = ["winuser", "winerror"]
 
 [target.'cfg(windows)'.dependencies]
-crossterm_winapi = "0.9"
+crossterm_winapi = { version = "0.9", optional = true }
 
 #
 # UNIX dependencies
