--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ all-features = true
 # Features
 #
 [features]
-default = ["bracketed-paste", "crossterm_winapi"]
+default = ["bracketed-paste", "windows"]
+windows = ["winapi", "crossterm_winapi"]
 bracketed-paste = []
 event-stream = ["futures-core"]
 use-dev-tty = ["filedescriptor"]
@@ -48,6 +49,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3.9"
 features = ["winuser", "winerror"]
+optional = true
 
 [target.'cfg(windows)'.dependencies]
 crossterm_winapi = { version = "0.9", optional = true }
