Make the events module an optional feature (#776)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,12 @@ all-features = true
 # Features
 #
 [features]
-default = ["bracketed-paste", "windows"]
+default = ["bracketed-paste", "windows", "events"]
 windows = ["winapi", "crossterm_winapi"]
 bracketed-paste = []
-event-stream = ["futures-core"]
+event-stream = ["futures-core", "events"]
 use-dev-tty = ["filedescriptor"]
-
+events = ["mio", "signal-hook", "signal-hook-mio"]
 #
 # Shared dependencies
 #
@@ -59,10 +59,10 @@ crossterm_winapi = { version = "0.9", optional = true }
 #
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
-signal-hook = { version = "0.3.13" }
+signal-hook = { version = "0.3.13", optional = true }
 filedescriptor = { version = "0.8", optional = true }
-mio = { version = "0.8", features = ["os-poll"] }
-signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
+mio = { version = "0.8", features = ["os-poll"], optional = true }
+signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"], optional = true }
 
 #
 # Dev dependencies (examples, ...)
@@ -79,12 +79,28 @@ serde_json = "1.0"
 #
 [[example]]
 name = "event-read"
-required-features = ["bracketed-paste"]
+required-features = ["bracketed-paste", "events"]
+
+[[example]]
+name = "event-match-modifiers"
+required-features = ["bracketed-paste", "events"]
+
+[[example]]
+name = "event-poll-read"
+required-features = ["bracketed-paste", "events"]
 
 [[example]]
 name = "event-stream-async-std"
-required-features = ["event-stream"]
+required-features = ["event-stream", "events"]
 
 [[example]]
 name = "event-stream-tokio"
-required-features = ["event-stream"]
+required-features = ["event-stream", "events"]
+
+[[example]]
+name = "event-read-char-line"
+required-features = ["events"]
+
+[[example]]
+name = "stderr"
+required-features = ["events"]
