--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ events = [
     "dep:signal-hook-mio",
 ] # Enables reading input/events from the system.
 serde = ["dep:serde", "bitflags/serde"] # Enables 'serde' for various types.
+rustix = ["dep:rustix"] # On Unix, enables using rustix as the underlying interface.
 
 #
 # Shared dependencies
@@ -73,15 +74,12 @@ crossterm_winapi = { version = "0.9.1", optional = true }
 [target.'cfg(unix)'.dependencies]
 signal-hook = { version = "0.3.17", optional = true }
 filedescriptor = { version = "0.8", optional = true }
+libc = { version = "0.2", default-features = false }
 mio = { version = "0.8", features = ["os-poll"], optional = true }
-<<<<<<< HEAD
 signal-hook-mio = { version = "0.2.3", features = [
     "support-v0_8",
 ], optional = true }
-=======
-signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"], optional = true }
-rustix = { version = "0.38.0", default-features = false, features = ["std", "stdio", "termios"] }
->>>>>>> 4ca0c8e (feat: Use rustix instead of libc)
+rustix = { version = "0.38.0", default-features = false, features = ["std", "stdio", "termios"], optional = true }
 
 #
 # Dev dependencies (examples, ...)
