Run clippy on all features in CI
Clippy is not checking code for features not in default-features.

I noticed that clippy didn't check the "clipboard" feature when
implementing it. This lead to some unnecessarily late fixed in a PR.
Running clippy on all features in CI, should avoid this.

--- a/.github/workflows/crossterm_test.yml
+++ b/.github/workflows/crossterm_test.yml
@@ -45,7 +45,7 @@ jobs:
       run: cargo fmt --all -- --check
       continue-on-error: ${{ matrix.can-fail }}
     - name: Clippy
-      run: cargo clippy -- -D clippy::all
+      run: cargo clippy --all-features -- -D clippy::all
       continue-on-error: ${{ matrix.can-fail }}
     - name: Test Build
       run: cargo build
