--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,10 +66,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 # Windows dependencies
 [target.'cfg(windows)'.dependencies]
 crossterm_winapi = { version = "0.9.1", optional = true }
-winapi = { version = "0.3.9", optional = true, features = [
-  "winuser",
-  "winerror",
-] }
+winapi = { version = "0.3.9", optional = true, features = ["winuser", "winerror"] }
 
 # UNIX dependencies
 [target.'cfg(unix)'.dependencies]
@@ -78,15 +75,9 @@ filedescriptor = { version = "0.8", optional = true }
 # compatibility.
 libc = { version = "0.2", default-features = false, optional = true }
 mio = { version = "1.0", features = ["os-poll"], optional = true }
-rustix = { version = "1", default-features = false, features = [
-  "std",
-  "stdio",
-  "termios",
-] }
+rustix = { version = "1", default-features = false, features = ["std", "stdio", "termios"] }
 signal-hook = { version = "0.3.17", optional = true }
-signal-hook-mio = { version = "0.2.4", features = [
-  "support-v1_0",
-], optional = true }
+signal-hook-mio = { version = "0.2.4", features = ["support-v1_0"], optional = true }
 # runtime
 calloop = { version = "0.14.2", optional = true }
 
