add dev-depandency: rand_core in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ serial_test = "3.0.0"
 temp-env = "0.3.6"
 tokio = { version = "1.44", features = ["full"] }
 russh = "0.53.0"
+rand_core = "0.6"
 anyhow="1"
 
 # Examples
